fix: popup window scrollbar & popup window animation

--- a/src/components/common/Modal/Modal.style.scss
+++ b/src/components/common/Modal/Modal.style.scss
@@ -128,12 +128,14 @@
   opacity: 1;
   pointer-events: all;
   transform: translateY(0);
+  transition: opacity 0.2s, transform 0.2s;
 }
 
 .inactive-modal {
   opacity: 0;
   pointer-events: none;
-  transform: translateY(20%);
+  transform: translateY(12px);
+  transition: opacity 0.2s, transform 0.2s;
 }
 
 .reflex-container.horizontal > .reflex-splitter.reflex-thin {
